syntax = "proto3";
package pb;
option go_package = "github.com/nireo/dcache/pb";

service Cache {
  rpc Set(SetRequest) returns (Empty);
  rpc Get(GetRequest) returns (GetResponse);
  rpc GetServers(Empty) returns (GetServer);
}

message SetRequest {
  string key = 1;
  bytes value = 2;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bytes value = 1;
}

message Empty {}

message Server {
  string id = 1;
  string rpc_addr = 2;
  bool is_leader = 3;
  // suffrage but this wording is simpler
  string vote_status = 4; 
}

message GetServer {
  repeated Server server = 1;
}
